--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/Ryu0012/petcare#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
