--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0",
-    "pug": "^3.0.2"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
