서버 실행 해결

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "win": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node src/server.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "repository": {
     "type": "git",
