--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/Ryu0012/petcare#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mybatis-mapper": "^0.6.8",
+    "mysql2": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
