--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/Ryu0012/petcare#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
