--- a/package.json
+++ b/package.json
@@ -21,11 +21,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
+    "dotenv": "^16.1.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "mongodb": "^5.6.0",
     "mongoose": "^6.7.1",
+    "mongos": "^0.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mybatis-mapper": "^0.6.8",
     "mysql2": "^3.3.1"
   },
